--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ language:
 before_install:
     - pip install --user cpp-coveralls
     
+addons:
+  sonarcloud:
+    organization: "kuuselaaaaa"
+    token: $SONAR
+    
 script:
     - qmake
     - make
