--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,11 @@
 sonar.projectKey=kuuselaaaaa_laboratory_work1
 sonar.organization=kuuselaaaaa
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=laboratory_work1
-#sonar.projectVersion=1.0
+sonar.login=kuuselaaaaa
+sonar.projectName=laboratory_work1
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=app
+sonar.cfamily.gcov.reportsPath=.
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.cfamily.build-wrapper-output=bw-output
+sonar.host.url=https://sonarcloud.io 
